fixed layout issues and revamped notifications

--- a/css/planZilla.css
+++ b/css/planZilla.css
@@ -1,6 +1,47 @@
 
+.clear { /*0,0,1,0*/
+  clear: both;
+}
+
+.pZ_bugstatus_CLOSED { /*0,0,1,0*/
+  text-decoration: line-through;
+}
+
+.pZ_floatLeft { /*0,0,1,0*/
+  float: left;
+}
+
+.pZ_floatRight { /*0,0,1,0*/
+  float: right;
+}
+
 .pZ_icon { /*0,0,1,0*/
   cursor:  pointer;
+}
+
+.pZ_severity_blocker { /* 0,0,1,0 */
+  color: #ed1c24;
+  font-weight: bold:
+}
+
+.pZ_severity_critical { /* 0,0,1,0 */
+  color: #aa1318;
+}
+
+.pZ_severity_major { /* 0,0,1,0 */
+  color: #4b0607;
+}
+
+.pZ_severity_normal { /* 0,0,1,0 */
+  color: black;
+}
+
+.pZ_severity_minor { /* 0,0,1,0 */
+  color: #333333;
+}
+
+.pZ_severity_trivial { /* 0,0,1,0 */
+  color: #4d4d4d;
 }
 
 div.pZ_buglist { /*0,0,1,1*/
@@ -14,18 +55,33 @@ div.pZ_bugitem { /*0,0,1,1*/
   border-left:  1px #4b0607 solid;
   margin-left: 5px;
   margin-top: 5px;
+  /*font-size: 1.2em;*/
+  font-size: 13px;
 }
 
-table.pZ_buglist { /*0,0,1,1*/
-  border:  3px #4b0607 double;
-  min-width: 100%;
+span.pZ_bugNotice { /*0,0,1,1*/
+  min-width: 22px;
+  min-height: 22px;
+  font-size: 1.1em;
+  display: inline-block;
+  text-align: center;
+  margin-right: 5px;
+}
+
+span.pZ_bugStatus { /*0,0,1,1*/
+  width: 40px;
+  min-height: 22px;
+  font-size: .8em;
+  display: inline-block;
+  text-align: center;
 }
 
 div.pZ_bugitem table{ /*0,0,1,2*/
-  width: 100%;
+  width: 80%;
 }
 div.pZ_bugitem td{ /*0,0,1,2*/
   overflow: hidden;
   white-space: nowrap;
+  font-size: 13px;
 }
 
